...
                app:navigationIcon="@drawable/ic_back"
                tools:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBillboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_m"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
