...
                    app:layout_constraintTop_toTopOf="@id/ivMovie"
                    app:layout_constraintStart_toStartOf="@id/ivMovie"
                    app:srcCompat="@drawable/ic_adultsonly"
                    tools:visibility="visible" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ivFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_m"
                    android:background="?android:attr/selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="@id/ivMovie"
                    app:layout_constraintBottom_toTopOf="@+id/tvTittleMovie"
...
